# advent-of-code

alex/2019/Day1/: Day1.m  find_fuel.m
alex/2019/Day11/: Day11.m  Process.m
alex/2019/Day12/: Day12.m  calc_energy.m  calc_position.m  calc_velocity.m
alex/2019/Day13/: Day13.m  Process.m  draw.m
alex/2019/Day2/: Day2.m
alex/2019/Day3/: Day3.m
alex/2019/Day4/: Day4.m
alex/2019/Day5/: Day5.m
alex/2019/Day6/: Day6.m  MakeTree.m
alex/2019/Day7/: Day7.m  Process.m  Process_Recurse.m
alex/2019/Day8/: Day8.m
ehg/Day11/: emu.cpp
ehg/Day12/: moons.cpp
ehg/Day13/: emu.cpp
ehg/Day14/: fuel.cpp
ehg/Day15/: emu.cpp
ehg/Day16/: main.cpp
ehg/Day18/: main.cpp
ehg/Day2/: emu.cpp  emu.vhd
ehg/Day23/: emu.cpp
ehg/Day24/: main.cpp
ehg/Day3/: grid.cpp  grid_basic.cpp
ehg/Day4/: pin.cpp
ehg/Day5/: emu.cpp
ehg/Day6/: orbits.cpp
ehg/Day7/: emu.cpp
ehg/Day8/: picture.cpp
ehg/Day9/: emu.cpp
james/: .gitignore
james/2021/: .gitignore  go.mod
james/2023/: .gitignore  flake.nix
james/2023/day01/: CMakeLists.txt  main.cpp
james/2023/util/: CMakeLists.txt  framework.cpp  framework.h
james/2024/: .gitignore  Cargo.toml  fetch_input.sh
treg/: .gitignore  1.py  12.txt  15.txt  16.txt  17.txt  18.txt  19.txt  2.txt  25.txt  day1.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day18.py  day19.py  day2.py  day20.py  day21.py  day22.py  day23.py  day24.py  day25.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py  day9.py  getInput.py  inconly.py  intcode.py  test_day1.py  test_day10.py  (+5 more)
(+183 files in other folders)
